# src/Http/Schema/ExportEncoding.php
@@ -1,0 +1,67 @@
+<?php
+
+/**
+ * webtrees: online genealogy
+ * Copyright (C) 2026 webtrees development team
+ *                    <http://webtrees.net>
+ *
+ * CustomModuleManager (webtrees custom module):
+ * Copyright (C) 2026 Markus Hemprich
+ *                    <http://www.familienforschung-hemprich.de>
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ * You should have received a copy of the GNU General Public License
+ * along with this program. If not, see <https://www.gnu.org/licenses/>.
+ *
+ * 
+ * webtrees API
+ *
+ * A webtrees(https://webtrees.net) 2.2 custom module to provide an API for webtrees
+ * 
+ */
+
+
+declare(strict_types=1);
+
+namespace Jefferson49\Webtrees\Module\WebtreesApi\Http\Schema;
+
+use Fisharebest\Webtrees\Encodings\ANSEL;
+use Fisharebest\Webtrees\Encodings\ASCII;
+use Fisharebest\Webtrees\Encodings\Windows1252;
+use Fisharebest\Webtrees\Encodings\UTF16BE;
+use Fisharebest\Webtrees\Encodings\UTF8;
+use OpenApi\Attributes as OA;
+
+
+/**
+ * ExportEncoding
+ *
+ * A character encoding for a GEDCOM file
+ */
+
+#[OA\Schema(
+    title: 'export_encoding',
+    description: 'The character encoding of a GEDCOM file',
+    type: 'string',
+    enum: self::SCHEMA_ENUM_VALUES,
+    default: UTF8::NAME,
+    additionalProperties: false,
+)]
+class ExportEncoding
+{
+    // Code from: Fisharebest\Webtrees\Http\RequestHandlers\ExportGedcomClient.php
+    public const array SCHEMA_ENUM_VALUES = [
+        UTF8::NAME,
+        UTF16BE::NAME,
+        ANSEL::NAME,
+        ASCII::NAME,
+        Windows1252::NAME,
+    ];
+}
